Test files for bazelbuild fork